# lvgl_esp_idf_tft_espi

./: .gitignore  CMakeLists.txt  README.txt  sdkconfig  sdkconfig.old
components/: lv_conf.h
components/lvgl_ui_files/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c
main/: CMakeLists.txt  idf_component.yml  main.cpp
